plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.4'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.sisyphus'
version = '0.0.1'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // 공통 애플리케이션 의존성
    implementation "org.springframework.boot:spring-boot-starter-web"
    implementation "org.springframework.boot:spring-boot-starter-data-jpa"
    implementation "org.springframework.boot:spring-boot-starter-validation"
    implementation "org.springframework.boot:spring-boot-starter-security"
    implementation "org.springframework.boot:spring-boot-starter-oauth2-client"
    implementation "org.springframework.boot:spring-boot-starter-mail"
    implementation "org.springframework.boot:spring-boot-starter-data-redis"
    implementation "org.springframework.boot:spring-boot-starter-actuator"
    implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.14"
    implementation "com.fasterxml.jackson.core:jackson-databind"

    // JWT
    implementation "io.jsonwebtoken:jjwt-api:0.12.5"
    runtimeOnly "io.jsonwebtoken:jjwt-impl:0.12.5"
    runtimeOnly "io.jsonwebtoken:jjwt-jackson:0.12.5"

    // 마이그레이션/DB 드라이버
    implementation "org.flywaydb:flyway-core"
    implementation "org.flywaydb:flyway-database-postgresql"
    runtimeOnly "org.postgresql:postgresql"   // 운영/개발 공통(PostgreSQL 실행 시)
    runtimeOnly "com.h2database:h2"           // 로컬 실행(Local profile)용

    // Lombok
    implementation "org.projectlombok:lombok"
    annotationProcessor "org.projectlombok:lombok"

    // 로컬(macOS Apple Silicon) DNS resolver 보강
    implementation("io.netty:netty-resolver-dns-native-macos:4.1.114.Final:osx-aarch_64")

    // 테스트
    testImplementation "org.springframework.boot:spring-boot-starter-test"
    testImplementation "org.mockito:mockito-core"
    testImplementation "org.mockito:mockito-junit-jupiter"
    testRuntimeOnly "org.junit.platform:junit-platform-launcher"

    // ! spring dev TODO: 배포 시 삭제
     developmentOnly("org.springframework.boot:spring-boot-devtools")

    // dotenv
     implementation "me.paulschwarz:spring-dotenv:3.0.0"
//     implementation "io.github.cdimascio:java-dotenv:5.2.2"
}


tasks.named('test') {
    useJUnitPlatform()
}
